--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+.container{
+    margin: 1 auto;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    gap: 1rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.resto-card{
+    background-color: whitesmoke;
+    overflow: hidden;
+    box-shadow: 2px 4px 5px gray;
+    border-radius: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.resto-card img{
+    width: 100%;
+    /* height: 20vh; */
+}
+.resto-card div{
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.resto-title{
+    font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
+.resto-price, .resto-category {
+    display: inline-block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.more-btn{
+    bottom: 0;
+    background-color: navy;
+    color: white;
+    margin-top: 1rem;
+    padding: .5rem;
+    border: none;
+    width: 100%;
+    border-radius:0%;
+}
+
+.btn-cont{
+    margin: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
